--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~50.0.4",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.2",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
     "lottie-react-native": "6.5.1",
