--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "zustand": "^4.5.0"
   },
