--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "apollo3-cache-persist": "^0.14.1",
-    "expo": "~50.0.4",
+    "expo": "~50.0.8",
     "expo-constants": "~15.4.5",
-    "expo-font": "~11.10.2",
+    "expo-font": "~11.10.3",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
@@ -32,7 +32,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
