--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
     "lottie-react-native": "6.5.1",
+    "moti": "^0.28.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
