--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.1.0",
     "prettier": "^3.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "*"
