--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@screens/*": ["./src/screens/*"],
       "@integrations/*": ["./src/integrations/*"],
       "@tailwind": ["./tailwind.config.js"],
-      "@shared/*": ["./src/shared/*"]
+      "@shared/*": ["./src/shared/*"],
+      "@appTypes/*": ["./src/types/*"]
     }
   }
 }
