--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "apollo3-cache-persist": "^0.14.1",
     "expo": "~50.0.8",
     "expo-constants": "~15.4.5",
