--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "yarn graphql:codegen && expo start",
     "android": "expo start --android",
     "type-check": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
@@ -25,6 +25,7 @@
     "expo": "~50.0.8",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
