--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "^3.8.10",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.18",
     "@rneui/base": "^4.0.0-rc.8",
@@ -35,10 +36,12 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "2.14.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "zustand": "^4.5.0"
   },
@@ -56,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-check-file": "^2.7.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
