--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "tcg",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "app.tsx",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "yarn graphql:codegen && expo start",
     "android": "expo start --android",
     "type-check": "tsc --noEmit",
@@ -36,7 +37,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "2.14.0",
-    "react-native-pager-view": "6.2.3",
+    "react-native-pager-view": "^7.0.0-rc.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -66,6 +67,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "*"
