--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "apollo3-cache-persist": "^0.14.1",
-    "expo": "~50.0.8",
+    "expo": "~50.0.11",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
@@ -43,6 +43,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "zustand": "^4.5.0"
   },
