--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.4",
     "tailwindcss": "3.3.2",
-    "typescript": "*"
+    "typescript": "5.3.3"
   },
   "private": true
 }
