--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-gesture-handler": "2.14.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-pager-view": "^7.0.0-rc.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-render-html": "^6.3.4",
