--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
+    "expo-linking": "~6.2.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
